# samarieter_str

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  dprint.json  justfile
migrations/: 20250503203152_init.down.sql  20250503203152_init.up.sql  20250525133889_items.up.sql
src/: db.rs  errors.rs  main.rs  routes.rs  structs.rs  utils.rs
static/: 404.html  index.html  login.html  register.html  sakura-dark.css  sakura.css
templates/: base.html  change-pwd.html  dashboard.html  home.html  login.html  register.html
