[package]
name = "samarieter_str"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
