[package]
name = "samarieter_str"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-utils = "3.0.1"
actix-web = "4.10.2"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
